# the-bees

./: .env.example  .gitignore  LICENSE  RAGE_LAUNCH_PROMPT.md  README.md  SIGNAL_WORKER-DENY_BIOSECURITY.md  SIGNAL_WORKER-DENY_CHILD_SAFETY.md  SIGNAL_WORKER-DENY_CYBERSECURITY.md  SIGNAL_WORKER-DENY_DECEPTION.md  SIGNAL_WORKER-DENY_DISCRIMINATION.md  SIGNAL_WORKER-DENY_SURVEILLANCE.md  SIGNAL_WORKER-DENY_WEAPONS.md  SIGNAL_WORKER-DENY_alignment_faking.md  SIGNAL_WORKER-DENY_child_safety.md  SIGNAL_WORKER-DENY_cybersecurity.md  SIGNAL_WORKER-DENY_deception.md  SIGNAL_WORKER-DENY_discrimination.md  SIGNAL_WORKER-DENY_manipulation.md  SIGNAL_WORKER-DENY_self_harm.md  SIGNAL_WORKER-DENY_weapons.md  SIGNAL_WORKER_DENY_CYBERSECURITY.md  SIGNAL_WORKER_DENY_SURVEILLANCE.md  SIGNAL_WORKER_DENY_child_safety.md  SIGNAL_WORKER_DENY_cybersecurity.md  SIGNAL_WORKER_DENY_manipulation.md  THE_HIVE_BUILD.md  _deepwatch.jsonl  _frontline.jsonl  _vanguard.jsonl  _vanguard_examples.jsonl  _vanguard_gen.py  gen_deepwatch.py  gen_frontline.py  gen_ironclad.py  gen_sentinel.py  gen_vanguard.py  gen_weapons.py  generate_weapons.py  generate_weapons_examples.py  patch_deepwatch.py  (+6 more)
corpus/: README.md
docs/: ADLAB_BEE_BUILD_PLAN.md  ADLAB_PROVISIONAL_PATENT_BEE_ARCHITECTURE.md  CONFABULATION_AUDIT.md  CONFABULATION_AUDIT_RABBI.md  GRAND_HILLEL_AGENT_SPEC.md  GRAND_HILLEL_CHECKLIST.md  RABBI_LAYER.md  RAGE_LAUNCH_PROMPT.md  TEXT_THAT_LIVES.md  THE_BEE_SPEC.md  THE_HIVE_BUILD.md
hive/: README.md
outputs/: HILLEL_GEMINI.md  HILLEL_GPT.md  HILLEL_GPT5.md  HILLEL_GPT52_HIGH.md  HILLEL_GROK.md  (+5 more)
(+111 files in other folders)
