[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-bees"
version = "0.1.0"
description = "A frozen-weight binary classifier alignment layer for AI systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AdLab", email = "adlab@example.com"},
]
keywords = ["ai", "alignment", "classifier", "safety"]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "safetensors>=0.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]
training = [
    "accelerate>=0.28.0",
    "bitsandbytes>=0.43.0",
    "peft>=0.10.0",
    "wandb>=0.16.0",
    "scikit-learn>=1.4.0",
]

[project.scripts]
bee = "src.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
